--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <body>
         
         <div id="container">
-            Conteúdo do site da editora Érica
+            
+            <header id="cabecalho">
+                <img class="logo" src="imagens/logo.jpg" alt="logotipo da editora Érica">
+                <img class="leia-livro" src="imagens/invista.jpg" alt="botão leia livros">
+                <p>Bom-Dia,<span class="bom-dia"> Visitante!</span></p>
+                <img class="login" src="imagens/login.gif" alt="acesse sua conta no site">
+            </header>
+
         </div>
 
     </body>
