--- a/index.html
+++ b/index.html
@@ -15,11 +15,324 @@
         <div id="container">
             
             <header id="cabecalho">
-                <img class="logo" src="imagens/logo.jpg" alt="logotipo da editora Érica">
+
+                <a href="index.html"><img class="logo" src="imagens/logo.jpg" alt="logotipo da editora Érica"></a>
                 <img class="leia-livro" src="imagens/invista.jpg" alt="botão leia livros">
                 <p>Bom-Dia,<span class="bom-dia"> Visitante!</span></p>
-                <img class="login" src="imagens/login.gif" alt="acesse sua conta no site">
+                <a href="#"><img class="login" src="imagens/login.gif" alt="acesse sua conta no site"></a>
+
+                <!--navegação do cliente-->
+                <ul id="nav-cliente">
+                    <li class="primeira">
+                        <a href="">Histórico de compra</a>
+                    </li>
+                    <li>
+                        <a href="">Meus dados</a>
+                    </li>
+                    <li>
+                        <a class="negrito" href="">Ver pedido</a>
+                    </li>
+                    <li>
+                        <img src="imagens/sacola_top.jpg">
+                    </li>
+                </ul>
+
+                <!--navegação das páginas do site-->
+                <ul id="nav-site">
+                    <li>
+                        <img class="casa" src="imagens/casa.jpg">
+                    </li>
+
+                    <li class="primeira">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Quem somos</a>
+                    </li>
+                    <li>
+                        <a href="#">Cadastro</a>
+                    </li>
+                    <li>
+                        <a href="#">Fale conosco</a>
+                    </li>
+                    <li>
+                        <a href="#">Seja um autor</a>
+                    </li>
+                    <li>
+                        <a href="#">Donwload</a>
+                    </li>
+                    <li>
+                        <a href="#">Erratas</a>
+                    </li>
+                    <li>
+                        <a href="#">Lançamentos</a>
+                    </li>
+                </ul>
+
+                <!--formuládio do cabeçalho-->
+                <div id="form-pesquisa">
+                    <form>
+                        <label>Pesquisar por:</label>
+                        <input class="radio" type="radio" name="pesquisa"> Autor
+                        <input class="radio" type="radio" name="pesquisa"> Título
+                        <input class="radio" type="radio" name="pesquisa"> Código
+                        <input class="radio campo" type="text" name="campo">
+                        <input class="ok" type="submit" value="OK">
+                    </form>
+                </div>
+                
             </header>
+
+            <!--navegação pelo catálago de livros-->
+            <nav>
+
+                <!--livros sobre Adm e negócios-->
+                <div class="titulo">
+                    <img src="imagens/catalogo.jpg">
+                    <img class="marcador" src="imagens/marcador.gif">
+                    <p class="titulo-catalago">
+                        Administração e Negócios
+                    </p>
+                </div>
+                <ul class="nav-catalago">
+                    <li>
+                        <a href="#">Administração</a>
+                    </li>
+                    <li>
+                        <a href="#">Recursos Humanos</a>
+                    </li>
+                    <li>
+                        <a href="#">Secretariado</a>
+                    </li>
+                    <li>
+                        <a href="#">Segurança do Trabalho</a>
+                    </li>
+                    <li>
+                        <a href="#">Tecnologia da Informação</a>
+                    </li>
+                    <li>
+                        <a href="#">Turismo</a>
+                    </li>
+                </ul>
+
+                <!--livros sobre construção civil-->
+                <div class="titulo">
+                    <img class="marcador" src="imagens/marcador.gif">
+                    <p class="titulo-catalago">
+                        Construção Civil
+                    </p>
+                </div>
+                <ul class="nav-catalago">
+                    <li>
+                        <a href="#">Construção Civil</a>
+                    </li>
+                </ul>
+
+                <!--livros educacionais-->
+                <div class="titulo">
+                    <img class="marcador" src="imagens/marcador.gif">
+                    <p class="titulo-catalago">
+                        Educação
+                    </p>
+                </div>
+                <ul class="nav-catalago">
+                    <li>
+                        <a href="#">Educacionais</a>
+                    </li>
+                    <li>
+                        <a href="#">Pedagógicos</a>
+                    </li>
+                </ul>
+
+                <!--livros sobre eletromecanica-->
+                <div class="titulo">
+                    <img class="marcador" src="imagens/marcador.gif">
+                    <p class="titulo-catalago">
+                        Eletromecanica
+                    </p>
+                </div>
+                <ul class="nav-catalago">
+                    <li>
+                        <a href="#">Automação</a>
+                    </li>
+                    <li>
+                        <a href="#">Eletrônica</a>
+                    </li>
+                    <li>
+                        <a href="#">Eletrotécnica</a>
+                    </li>
+                    <li>
+                        <a href="#">Instrumentação e Metrologia</a>
+                    </li>
+                    <li>
+                        <a href="#">Mecânica</a>
+                    </li>
+                    <li>
+                        <a href="#">Microcontroladores</a>
+                    </li>
+                    <li>
+                        <a href="#">Sistemas Embarcados</a>
+                    </li>
+                </ul>
+
+                <!--livros sobre informática-->
+                <div class="titulo">
+                    <img class="marcador" src="imagens/marcador.gif">
+                    <p class="titulo-catalago">
+                        Informática
+                    </p>
+                </div>
+                <ul class="nav-catalago">
+                    <li>
+                        <a href="#">Análise de Sisemas</a>
+                    </li>
+                    <li>
+                        <a href="#">Banco de Dados</a>
+                    </li>
+                    <li>
+                        <a href="#">Computação Gráfica</a>
+                    </li>
+                    <li>
+                        <a href="#">Hardware</a>
+                    </li>
+                    <li>
+                        <a href="#">Internet</a>
+                    </li>
+                    <li>
+                        <a href="#">Linguagem de Programação</a>
+                    </li>
+                    <li>
+                        <a href="#">Office</a>
+                    </li>
+                    <li>
+                        <a href="#">Processamento de Dados</a>
+                    </li>
+                    <li>
+                        <a href="#">Sistemas Operacionais</a>
+                    </li>
+                </ul>
+
+                <!--livros sobre logística-->
+                <div class="titulo">
+                    <img class="marcador" src="imagens/marcador.gif">
+                    <p class="titulo-catalago">
+                        Logística
+                    </p>
+                </div>
+                <ul class="nav-catalago">
+                    <li>
+                        <a href="#">Logística</a>
+                    </li>
+                </ul>
+
+                <!--livros sobre redes e comunicações-->
+                <div class="titulo">
+                    <img class="marcador" src="imagens/marcador.gif">
+                    <p class="titulo-catalago">
+                        Redes & Telecomunicações
+                    </p>
+                </div>
+                <ul class="nav-catalago">
+                    <li>
+                        <a href="#">Redes</a>
+                    </li>
+                    <li>
+                        <a href="#">Telecomunicações</a>
+                    </li>
+                </ul>
+
+                <!--livros sobre saúde-->
+                <div class="titulo">
+                    <img class="marcador" src="imagens/marcador.gif">
+                    <p class="titulo-catalago">
+                        Saúde
+                    </p>
+                </div>
+                <ul class="nav-catalago">
+                    <li>
+                        <a href="#">Administração e Gestão</a>
+                    </li>
+                    <li>
+                        <a href="#">Centro Cirúrgico e<br> Central de Material e Esterelização</a>
+                    </li>
+                    <li>
+                        <a href="#">Clínica Médica</a>
+                    </li>
+                    <li>
+                        <a href="#">Embriologia</a>
+                    </li>
+                    <li>
+                        <a href="#">Exame Clínico e Semiotécnica</a>
+                    </li>
+                    <li>
+                        <a href="#">Infectologia</a>
+                    </li>
+                    <li>
+                        <a href="#">Pediatria e Saúde da Criança</a>
+                    </li>
+                    <li>
+                        <a href="#">Radiologia</a>
+                    </li>
+                    <li>
+                        <a href="#">Saúde do Idoso</a>
+                    </li>
+                </ul>
+
+                <!--livros com projetos-->
+                <div class="titulo">
+                    <img class="marcador" src="imagens/marcador.gif">
+                    <p class="titulo-catalago">
+                        Séries Especiais
+                    </p>
+                </div>
+                <ul class="nav-catalago">
+                    <li>
+                        <a href="#">Estudo Dirigido</a>
+                    </li>
+                    <li>
+                        <a href="#">Faça um Aplicativo</a>
+                    </li>
+                    <li>
+                        <a href="#">Faça um Site</a>
+                    </li>
+                    <li>
+                        <a href="#">Informática</a>
+                    </li>
+                    <li>
+                        <a href="#">Informática na Escola</a>
+                    </li>
+                    <li>
+                        <a href="#">Projetos em Sala de Aula</a>
+                    </li>
+                    <li>
+                        <a href="#">Office</a>
+                    </li>
+                    <li>
+                        <a href="#">Processamento de Dados</a>
+                    </li>
+                    <li>
+                        <a href="#">Sistemas Operacionais</a>
+                    </li>
+                </ul>
+
+            </nav>
+
+            <main>
+                Aqui vai o conteúdo principal da página
+            </main>
+
+            <div>
+                <p>
+                    À venda nas principais livrarias, lojas e sites especializados ou no showroom da Editora Érica.
+                </p>
+                <p>
+                    Os preços de nossos produtos estão sujeitos à alteração sem prévio aviso.
+                </p>
+            </div>
+
+            <footer>
+                Aqui vai o conteúdo do rodapé
+            </footer>
 
         </div>
 
