--- a/index.html
+++ b/index.html
@@ -333,7 +333,16 @@
 
                 <a href="#"><img src="imagens/iatria.jpg" class="atria"></a>
 
-                <a href="#"><img src="imagens/cadastroprofessor.jpg" ></a>
+                <div class="banners">
+                    <a href="#"><img src="imagens/cadastroprofessor.jpg" ></a>
+                    <a href="#"><img src="imagens/pontaestoque.jpg"></a>
+                    <a href="#"><img src="imagens/comocomprar.jpg"></a>
+                    <a href="#"><img src="imagens/ondecomprar.jpg"></a>
+                    <a href="#"><img src="imagens/projetosonline.jpg"></a>
+                    <a href="#"><img src="imagens/maisvendidos.jpg"></a>
+                </div>
+
+                <a href="#"><img src="imagens/banner_infobook.gif" class="infobook"></a>
                 
             </aside>
 
