--- a/index.html
+++ b/index.html
@@ -346,8 +346,10 @@
                 
             </aside>
 
+            <!--início do footer-->
             <footer id="rodape" style="clear: both;">
                 
+                <!--secão aviso do footer-->
                 <section class="rodape-aviso">
                     <p>
                         À venda nas principais livrarias, lojas e sites especializados ou no showroom da Editora Érica. <br><br>
@@ -355,9 +357,34 @@
                         Os preços de nossos produtos estão sujeitos à alteração sem prévio aviso.
                     </p>
                 </section>
+                <!--seção formas de pagamento do footer-->
                 <section class="rodape-pagamento">
-                    conteúdo
+                    <div class="formas-pgto">
+                        <p>Formas de pagamento:</p>
+                    </div>
+                    <div class="pgto-credito">
+                        <p>Cartões de crédito</p>
+                        <img src="imagens/ico_visa.gif" alt="cartão Visa">
+                        <img src="imagens/ico_master.gif" alt="cartão Mastercard">
+                        <img src="imagens/ico_diner.gif" alt="cartão Dinners">
+                    </div>
+                    <div class="pgto-boleto">
+                        <p>Boleto</p>
+                        <img src="imagens/ico_boleto.gif" alt="pagamento por boleto">
+                    </div>
+                    <div class="pgto-debito">
+                        <p>Débito em conta</p>
+                        <img src="imagens/ico_itau.gif" alt="débito em conta no Itaú">
+                    </div>
+                    <div class="pgto-deposito">
+                        <p>Depósito em conta</p>
+                        <img src="imagens/btcaixa.jpg" alt="depósito na Caixa Federal">
+                        <img src="imagens/bradesco.jpg" alt="depósito no Bradesco">
+                        <img src="imagens/brasil.jpg" alt="depósito no banco do Brasil">
+                        <img src="imagens/itau.jpg" alt="depósito no Itaú">
+                    </div>
                 </section>
+                <!--seção final do footer-->
                 <section class="rodape-base">
                     <img src="imagens/logo_erica.png" alt="logotipo da editora Érica">
 
