--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
 
             </nav>
 
+            <!--conteúdo principal-->
             <main id="principal">
                 <img src="imagens/natal2011.jpg" alt="banner do natal de 2011">
 
@@ -326,9 +327,23 @@
                             Últimos lançamentos
                         </p>
                     </div>
+
+                    <div class="livro">
+                        <a href="detalhes-html5.html"><img src="imagens/3882g.jpg" alt="livro HTML 5" class="capa-livro"></a>
+
+                        <span class="preco-livro">R$ 104,00</span>
+
+                        <a href="detalhes-html5.html"><img src="imagens/mais.jpg" alt="botão Detalhes" class="btn-detalhes"></a>
+
+                        <p class="titulo-livro">HTML5 - Guia Prático</p>
+
+                        <p class="autor">Evandro Carlos Teruel</p>
+                        
+                    </div>
                 </section>
             </main>
 
+            <!--barra lateral com banners-->
             <aside id="lateral">
 
                 <a href="#"><img src="imagens/iatria.jpg" class="atria"></a>
